--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,62 @@
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(1fr, 2fr));
-  grid-auto-rows: min-content;
-  gap: 20px 20px;
-  grid-template-areas: "asd a2 a3 a4" "a5 a6 a7 a8" "a9 a10 a11 a12";
+body {
+    font-family: sans-serif;
+    background-color: #e4e4e4;
+    text-align: center;
 }
 
-.asd { grid-area: asd; }
-
-.a2 { grid-area: a2; }
-
-.a3 { grid-area: a3; }
-
-.a4 { grid-area: a4; }
-
-.a5 { grid-area: a5; }
-
-.a6 { grid-area: a6; }
-
-.a7 { grid-area: a7; }
-
-.a8 { grid-area: a8; }
-
-.a9 { grid-area: a9; }
-
-.a10 { grid-area: a10; }
-
-.a11 { grid-area: a11; }
-
-.a12 { grid-area: a12; }
-
-.girl {
-  height: 300px;
+.header {
+  font-weight: 100;
+  color: #3d3d3d;
 }
 
-@media only screen and (max-width: 700px) {
-  .grid-container {
-    grid-template-areas: "asd a2"
-                          "a3 a4" 
-                          "a5 a6"
-                          "a7 a8" 
-                          "a9 a10"
-                          " a11 a12";
+.big {
+    font-size: 100px;
+    color: #353449;
+}
+
+@media only screen and (max-width: 600px) {
+    .big {
+      font-size: 30px;
+    }
+    .mid {
+        font-size: 20px;
+    }
   }
+
+.mid {
+    font-size: 40px;
+    color: #4f4e5a;
+}
+
+.grid-layout {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    grid-gap: 10px;
+    grid-auto-rows: minmax(180px, auto);
+    grid-auto-flow: dense;
+    padding: 10px;
+}
+
+.grid-item {
+    padding: 1rem;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #ffffff;
+    border-radius: 5px;
+    transition: all .5s;
+}
+
+.grid-item:hover {
+  transform: scale(1.02);
+}
+
+.span-2 {
+    grid-column-end: span 2;
+    grid-row-end: span 2;
+}
+
+.span-3 {
+    grid-column-end: span 3;
+    grid-row-end: span 4;
 }
