--- a/src/App.css
+++ b/src/App.css
@@ -6,26 +6,18 @@ body {
 
 .header {
   font-weight: 100;
-  color: #3d3d3d;
+  color: #676767;
 }
 
 .big {
-    font-size: 100px;
-    color: #353449;
+    font-size: 40px;
+    color: #676767;
 }
 
-@media only screen and (max-width: 600px) {
-    .big {
-      font-size: 30px;
-    }
-    .mid {
-        font-size: 20px;
-    }
-  }
 
 .mid {
     font-size: 40px;
-    color: #4f4e5a;
+    color: #676767;
 }
 
 .grid-layout {
@@ -45,6 +37,7 @@ body {
     color: #ffffff;
     border-radius: 5px;
     transition: all .5s;
+    cursor: pointer;
 }
 
 .grid-item:hover {
@@ -60,3 +53,137 @@ body {
     grid-column-end: span 3;
     grid-row-end: span 4;
 }
+
+
+
+.popup {
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    top: 0;
+    width: 50%;
+    height: 150px;
+    left: 50%;
+    transform: translate(-50%);
+    border-radius: 0 0 20px 20px;
+    -webkit-box-shadow: -1px 18px 46px -17px rgba(138,138,138,1);
+    -moz-box-shadow: -1px 18px 46px -17px rgba(138,138,138,1);
+    box-shadow: -1px 18px 46px -17px rgba(138,138,138,1);
+    z-index: 10;
+    cursor: pointer;
+}
+
+
+.popup-img {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    top: 10%;
+    left: 5%;
+    border-radius: 10px;
+
+}
+
+.popup-txt {
+    padding:0 15px 0 15px;
+    margin-left: 50px;
+}
+
+.popup-big-txt {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+button {
+    padding: 10px;
+    background-color: rgb(51, 117, 119);
+    border-radius: 10px;
+    font-size: 20px;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+
+
+.btn {
+    background: linear-gradient(#e52d27, #b31217);
+    width: 300px;
+    margin-bottom: 400px;
+    cursor: pointer;
+}
+
+
+
+.cta-txt {
+    font-size: 30px;
+    font-weight: 100;
+    margin-top: 200px;
+}
+
+.wrapper {
+    background: white;
+    display: inline-block;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.wrapper-border {
+    background: linear-gradient(to right, red, purple);
+    padding: 3px;
+    display: inline-block;
+    margin: 40px 0;
+    border-radius: 10px;
+}
+
+.gif {
+    margin-top: 100px;
+    width: 60%;
+    height: 200px;
+    cursor: pointer;
+}
+
+.close {
+    text-align: right;
+    position: absolute;
+    right: 15px;
+}
+
+.mb {
+    margin-top: 100px;
+}
+
+.chart-wrapper {
+    padding: 100px;
+    text-align: center;
+}
+
+@media only screen and (max-width: 900px) {
+    .popup {
+        width: 90%;
+    }
+
+    .popup-img {
+        left: 5%;
+    }
+
+    .popup-txt {
+        margin-left: 90px;
+    }
+
+    .chart-wrapper {
+        padding: 10px;
+    }
+  }
+
+  @media only screen and (max-width: 900px) {
+    .big {
+      font-size: 30px;
+    }
+    .mid {
+        font-size: 20px;
+    }
+
+    .grid-layout {
+        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    }
+  }
